feat: additional logging added (#35)
Co-authored-by: a.gorin <a.gorin@infomaximum.com>